fix one caption

--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -720,7 +720,7 @@ The original trajectories of these ligands are very complex, as can be seen in F
 	\includegraphics[width=0.95\linewidth]{img/tcp3_paths.png}
   \caption{
   \label{fig:tcp3_paths}
-  Haloalkane dehalogenase (blue) with the original trajectories of three ligands, TCP--294, TCP--295, and TCP--296 (grey, orange, and red).
+  Haloalkane dehalogenase (blue) with the original trajectories of three ligands, TCP--294, TCP--295, and TCP--296 (red, grey, and orange).
   }
 \end{figure}  
 
