fix caption in fig 11

--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -680,7 +680,7 @@ For this reason they utilized the bar chart view containing the amino acid graph
 \begin{figure}[tb]
 	\centering
   \includegraphics[width=0.95\linewidth]{img/case_hydro_vs_dist_bar.png}
-  \caption{\label{fig:case_hydro_vs_dist_bar} Bar chart view showing the time steps when the ligand is in the vicinity of the hydrophilic amino acids (blue bars).}
+  \caption{\label{fig:case_hydro_vs_dist_bar} Bar chart view showing the time steps when the ligand is in the vicinity of the hydrophilic amino acids.}
 \end{figure}
 
 
