case some changes

--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -779,9 +779,9 @@ This can be seen either from the distance scatterplots (see Figure~\ref{fig:tcp3
 \end{figure} 
 
 At this point the biochemists were already able to conclude that only two of the ligands entered the binding site of the protein and only one of them entered the deeply buried active site.
-Nevertheless, some additional observations can be done afterwards as well.  
-For instance, obviously there is a spike in the distance of TCP--296 from the active site around time step 30.000. 
-This corresponds to the time when the TCP--294 started to head towards the active site.
+Nevertheless, some additional observations revealing more details about the simulation can be done afterwards as well.  
+Among others, there is obviously a spike in the distance of TCP--296 from the active site around time step 30.000. 
+This corresponds to the time when the TCP--294 started to head towards the active site (see Figure~\ref{}).
 
 Another example is using the scatterplot showing the relationship between the distance from the active site and the stuckness of the ligand (see Figure~\ref{fig:tcp3_dist_stuckness_295}).
 From this scatterplot we can see that the ligand was highly oscillating in a close vicinity of the active site.
